unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/ia_crm__Sales_Document_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Document Item</label>
    <nameField>
        <label>Sales Document Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Document Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>