unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Bill_to__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Document Items</relationshipLabel>
    <relationshipName>Sales_Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>