unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Corp_Currency_Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Corp_Currency_Extended_Price__c</fullName>
    <label>Corp Currency Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>