unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Discount__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>