unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Intacct_Location__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Location</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Sales Document Items</relationshipLabel>
    <relationshipName>Sales_Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>