unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Is_Sales_Document_Synced__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Sales_Document_Synced__c</fullName>
    <formula>!ISNULL(ia_crm__Sales_Document__r.ia_crm__Synced_With_Intacct_Date__c)</formula>
    <label>Is Sales Document Synced</label>
    <type>Checkbox</type>
</CustomField>