unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Item_Description__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Item_Description__c</fullName>
    <label>Item Description</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>