unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__List_Price__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__List_Price__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>