unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Renewal_Template__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Renewal_Template__c.ia_crm__Transaction_type__c</field>
            <operation>equals</operation>
            <value>Sales transaction</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Renewal_Template__c</referenceTo>
    <relationshipLabel>Sales Document Items</relationshipLabel>
    <relationshipName>Sales_Document_Items</relationshipName>
    <type>Lookup</type>
</CustomField>