unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sales_Document__c</fullName>
    <label>Sales Document</label>
    <referenceTo>ia_crm__Sales_Document__c</referenceTo>
    <relationshipLabel>Sales Document Items</relationshipLabel>
    <relationshipName>Sales_Document_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>