unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>