unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Document Items (Ship to)</relationshipLabel>
    <relationshipName>Sales_Document_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>