unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Taxable__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>