unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Unit__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Unit__c</fullName>
    <label>Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>