unpackaged/main/default/objects/ia_crm__Sales_Document_Item__c/fields/ia_crm__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>